manifests/ambient-mode/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-experiments-application-with-ambient-mode
