manifests/ambient-mode/request-authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-validation-for-ingress-gateway
  namespace: istio-experiments-ambient-mode-application
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: microservices-ingress-gateway
  jwtRules:
    - issuer: "testing@secure.istio.io"
      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.28/security/tools/jwt/samples/jwks.json"
