manifests/ambient-mode/just-to-have-k8s-serviceaccount-jwts-as-requestauthentication-jwts.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jwks-validation-proxy
  name: jwks-validation-proxy
  namespace: istio-experiments-ambient-mode-application
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: the-only-port
  selector:
    app.kubernetes.io/name: jwks-validation-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jwks-validation-proxy
  name: jwks-validation-proxy
  namespace: istio-experiments-ambient-mode-application
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jwks-validation-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jwks-validation-proxy
    spec:
      containers:
        - args:
            - proxy
            - --address=0.0.0.0
            - --port=8080
            - --accept-hosts=.*
            - --accept-paths=^(?:/openid/v1/jwks)|(?:/.well-known/openid-configuration)$
            - --reject-methods=^(POST|PUT|PATCH|DELETE|HEAD|OPTIONS|CONNECT|TRACE)$
          image: docker.io/bitnamisecure/kubectl:latest
          livenessProbe:
            httpGet:
              path: /openid/v1/jwks
              port: the-only-port
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
          name: jwks-validation-proxy
          ports:
            - containerPort: 8080
              name: the-only-port
          readinessProbe:
            httpGet:
              path: /openid/v1/jwks
              port: the-only-port
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            httpGet:
              path: /openid/v1/jwks
              port: the-only-port
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
        serviceAccountName: jwks-validation-proxy
