manifests/ambient-mode/waypoint-proxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/waypoint-for: service
  name: fancy-waypoint-proxy
  namespace: istio-experiments-ambient-mode-application
spec:
  gatewayClassName: istio
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
