manifests/ambient-mode/destination-rules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: microservice-a
  namespace: istio-experiments-ambient-mode-application
spec:
  host: microservice-a
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 30
      tcp:
        maxConnections: 6
        maxConnectionDuration: 10s
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: microservice-b
  namespace: istio-experiments-ambient-mode-application
spec:
  host: microservice-b
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 30
      tcp:
        maxConnections: 6
        maxConnectionDuration: 10s
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: microservice-c
  namespace: istio-experiments-ambient-mode-application
spec:
  host: microservice-c
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 30
      tcp:
        maxConnections: 6
        maxConnectionDuration: 10s
    loadBalancer:
      simple: LEAST_REQUEST
